fixed bug in styles with jumping page

--- a/app/stylesheets/master.sass
+++ b/app/stylesheets/master.sass
@@ -149,7 +149,9 @@ form.formtastic p.inline-errors
 //--------------------- [ layout ] ---------------------//
 body
   font-family: "lucida grande", tahoma, verdana, arial, sans-serif
-
+#base-content
+  width: 760px
+  overflow: hidden
 #sidebar
   width: 170px
   min-height: 300px
@@ -182,6 +184,7 @@ body
   border-color: #BCBEC0
   border-width: 0 1px
   border-style: solid
+  overflow: hidden
   
 #header
   margin-bottom: 10px
@@ -303,7 +306,7 @@ div.jGrowl div.jGrowl-notification a
   display: none
   clear: both
   overflow: hidden
-  margin: 10px 0  
+  margin: 10px 0 
   .friends
     margin-bottom: 10px
     label
